--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -21,11 +21,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 {%- macro memory_class(node) %}
     {%- if node.is_sw_readable and node.is_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Async{% endif %}ReadWrite):
+class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Async{% endif %}ReadWrite{% if legacy_block_access %}Legacy{% endif %}):
     {%- elif node.is_sw_readable and not node.is_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Async{% endif %}ReadOnly):
+class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Async{% endif %}ReadOnly{% if legacy_block_access %}Legacy{% endif %}):
     {%- elif not node.is_sw_readable and node.is_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Async{% endif %}WriteOnly):
+class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Async{% endif %}WriteOnly{% if legacy_block_access %}Legacy{% endif %}):
     {%- endif %}
     """
     Class to represent a memory in the register model
@@ -123,18 +123,6 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Memory{% if asyncoutput 
     @property
     def _element_datatype(self) -> Type[Node]:
         return {{get_fully_qualified_type_name(node)}}_cls
-    {%- endif %}
-
-    {% if node.is_sw_readable %}
-    def read(self, start_entry: int, number_entries: int) -> {% if legacy_block_access %}Array{% else %}List[int]{% endif %}:
-        return self._read{% if legacy_block_access %}_legacy{% endif %}(start_entry=start_entry, number_entries=number_entries)
-    {%- endif %}
-
-    {% if node.is_sw_writable %}
-    def write(self, start_entry: int, data: {% if legacy_block_access %}Array{% else %}List[int]{% endif %}) -> None:
-        if not isinstance(data, {% if legacy_block_access %}Array{% else %}List{% endif %}):
-            raise TypeError(f'data should be an {% if legacy_block_access %}Array{% else %}List{% endif %} got {type(data)}')
-        return self._write(start_entry=start_entry, data=data)
     {%- endif %}
 
 {%- endmacro %}
